Introduciendo el operador `if`
Que se metía ahí a jopo más adelante cuando se hablaba de recursión,
pero la verdad es que el sitio más adecuado es precisamente
este. Gracias a @gregoriorobles por notarlo.

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -107,6 +107,47 @@ Verdadero o Falso.
 >si es satisfacible o no. Altérala y conviértela en no-satisfacible,
 >probándola también sistemáticamente. 
 
+Hay
+más
+[operaciones lógicas](https://en.wikipedia.org/wiki/Logical_connective),
+algunas de las cuales están implementadas en Python. Por ejemplo, la
+implicación → "Si A, entonces B". Es decir, si A es cierto, entonces
+el resultado de `A → B` es B. Pero si es falso, el resultado estaría
+indeterminado, por lo que este operador es, en general, ternario,
+expresando dos posibles resultados dependiendo si el antecedente es
+cierto o falso. En Python se haría así:
+
+```Python
+"Cierto" if True else "Falso"
+'Cierto'
+```
+
+Lo cierto es que el orden de estos operadores en Python es un poco
+extraño. Este operador ternario, en otros lenguajes, se suele llamar
+simplemente *el* operador ternario, porque no hay otro. Por ejemplo,
+en Scala sigue el orden más o menos *natural*:
+
+```Scala
+scala> if (true) "Que si" else "Que no"
+res1: String = Que si
+```
+
+En otros lenguajes, como C#, siguen una sintaxis mucho más habitual
+que viene del lenguaje C original:
+
+```Csharp
+csharp> true?"Yay":"Nay"
+"Yay"
+```
+
+El orden es igual que en el anterior: antes del símbolo de
+interrogación está la condición; si es cierta, el resultado será
+`"Yay"`, si no, `"Nay"`. Efectivamente, el resultado de la aplicación
+de este, o *el*, operador ternario, es el esperable. 
+
+
+
+
 ## Comparaciones no odiosas.
 
 Algunas operaciones también devuelven un valor lógico: verdadero o falso. Un número es mayor o igual que otro, por ejemplo.
