Primera versión del prólogo

--- a/txt/00.prologo.md
+++ b/txt/00.prologo.md
@@ -1,2 +1,55 @@
 # El zen de la programación en el siglo XXI
 
+Aprender a programar en el siglo XXI no puede seguir siendo una
+repetición de patrones del siglo XX: `print("Hola Mundo")`, variables,
+bucles, decisión, funciones... La sintaxis importa cada vez menos
+porque todo está en Internet, importa la intención y lo que se quiere
+hacer y explicar los conceptos computacionales y cómo se implementan
+en un lenguaje en particular. También en otros lenguajes: ningún
+programador usa un sólo lenguaje hoy en día, ni siquiera en un solo
+momento: las aplicaciones son complejas, juntando lenguajes
+específicos de dominio con otros más generales, lenguajes más cercanos
+a los datos con otros más cercanos al interfaz.
+
+Por eso en este pequeño tutorial avanzamos línea a línea en el
+lenguaje Python, concentrándonos en cómo se abstraen los problemas a
+datos y cómo se transforman estos, con un enfoque *funcional*, que,
+aunque no es el más cercano a la filosofía de Python, encaja
+perfectamente con él y también con la filosofía más general de la
+programación en el siglo XXI. 
+
+Ningún lenguaje se programa solo en su propio entorno. Por eso, a lo
+largo del libro, hay capítulos dedicados al resto de las herramientas
+que se suelen usar en la vida de una programadora, desde editores
+hasta GitHub. 
+
+## Manual de uso
+
+Este lenguaje necesita una instalación de Python 3 lista para
+trabajar. En el primer capítulo se dan diferentes opciones sobre cómo
+conseguirla. Aconsejamos repetir, copiando y pegando, los ejemplos, y
+hacer los ejercicios, publicándolos con el hashtag `#1linepy`. De vez
+en cuando le echaré un vistazo y likearé a destajo. 
+
+No es un manual exhaustivo de programación en Python. A partir de aquí
+puedes pasar
+a
+[Python paso a paso, de Ángel Pablo Hinojosa](http://amzn.to/2tt6xZT),
+o manuales o vídeos en Internet. Lo que pretende, en general, es que
+se aprenda una metodología de programación que, aunque no totalmente
+de acuerdo con la filosofía de Python, sí lo está con el resto de la
+filosofía de programación actual. 
+
+## Agradecimientos
+
+A [Manu](https://github.com/Makova) por
+correcciones y a [José Manuel Colella](https://github.com/josecolella)
+por varias aportaciones.
+A [Jesús Leganés](https://github.com/piranna) por
+consejos y revisiones,
+a [Gregorio Robles](https://github.com/gregoriorobles) por una extensa
+revisión y consejos para transformar este material en una clase. 
+
+También por supuesto a Jesús Moreno León, codirector del curso de la
+UIMP que fue donde impartí, junto con Gregorio, este material por
+primera vez. 
