--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -123,10 +123,9 @@ Si simplemente quieres ir probando cosas desde tu tablet o un ordenador accesibl
 > *Ejercicio*: regístrate en `repl.it` usando tu cuenta de Google, Facebook o GitHub. Si no estás registrado en GitHub, quizás sea un buen momento para hacerlo. 
 
 Python, de hecho, está *empotrado* en muchas aplicaciones, como un
-lenguaje que sirve para escribir *plugins* o extensiones. Es posible
-que 
+lenguaje que sirve para escribir *plugins* o extensiones. Tal vez  
 
-## Python esté en tus programas habituales.
+## Python está en tus programas habituales.
 
 ![En Gimp](../img/python-gimp.png)
 
