Sustituye esté por está

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -126,7 +126,7 @@ Python, de hecho, está *empotrado* en muchas aplicaciones, como un
 lenguaje que sirve para escribir *plugins* o extensiones. Es posible
 que 
 
-## Python esté en tus programas habituales.
+## Python está en tus programas habituales.
 
 ![En Gimp](../img/python-gimp.png)
 
