--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -197,8 +197,9 @@ _ + " y Loki el mentiroso ❄"
 'þor y Loki el mentiroso ❄'
 ```
 
-y el "*" *multiplicará*: `"þor, "*3+"y más þor"` resultará en `'þor,
-þor, þor, y más þor'`. 
+y el asterisco `*`, usado tradicionalmente como símbolo para
+multiplicar, en este caso las replicará `"þor, " * 3 + "y más þor"`
+resultará en la cadena `'þor, þor, þor, y más þor'`. 
 
 El tipo de estas cadenas es `str`. ¿Y qué ocurre cuando tratamos de
 mezclarlas con los números? Pues que resulta en un error.
