--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -226,8 +226,7 @@ número. Podemos por ejemplo ir creando una sucesión de Fibonacci,
 partiendo de un valor inicial: los dos primeros valores.
 
 ```Python
-def fib(n): return reduce( lambda prev,this: prev+ [prev[-2]+prev[-1]], rang
-e(1,n+1), [1,1])
+def fib(n): return reduce( lambda prev,this: prev+ [prev[-2]+prev[-1]], range(1,n+1), [1,1])
 fib(12)
 [1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377]
 ```
