Cambio no registrado...

--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -480,7 +480,7 @@ juega(juego_ricky)
 ```
 
 Como hay un ``random()`` en la estrategia, la carta resultante será 
-una aleatoria de entre las que ricky tenga en su mano.
+una aleatoria de entre las que Ricky tenga en su mano.
 
 > *Ejercicio*: diseñar una estructura de datos para sucesiones
 > matemáticas que contenga el nombre de la sucesión, el elemento
