--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -9,15 +9,14 @@ necesite python. Escribe
 	python --version
 
 en tu línea de órdenes para ver qué versión tienes instalada. Si
-tienes la versión 3, estás listo. Si no, continúa leyendo después del
+tienes la versión 3, estás listo para hacer los ejercicios del resto del libro. Si no, continúa leyendo después del
 interludio siguiente.
 
 ## Trabajando con la línea de órdenes.
 
-La mayoría de los desarrolladores usan Linux o Mac para trabajar. Es
+La mayoría de los desarrolladores usan ordenadores con el sistema operativo Linux o Macs para trabajar. Es
 posible que tú no lo uses, pero no tienes que preocuparte, porque
-puedes
-trabajar
+puedes trabajar
 [de la misma forma en Windows](https://www.xataka.com/aplicaciones/asi-es-usar-la-consola-bash-de-ubuntu-en-windows-10). En
 las últimas actualizaciones todavía es más fácil,
 pudiendo
