Explicando un poco major el texto
Sugerencia de @cecimerelo

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -82,8 +82,9 @@ equivale a Falso. Con `or` sucederá algo similar:
 45
 ```
 
-`or`eando un valor falso ([]) y otro verdadero, devolverá el que sea
-verdadero, o el uno de ellos operando si los dos tienen el mismo tipo. A
+`or`eando un valor falso ([], que equivale a un *array* vacío y por
+tanto es falso) y otro verdadero, devolverá el que sea
+verdadero, o uno de ellos operando si los dos tienen el mismo tipo. A
 `or` le basta con que sea cierto uno de los operandos, como se ve
 arriba. 
 
