Buscando las órdenes que despliegan la ventana del REPL
Refs #12, se cerrará cuando se comprueba que es correcta.

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -178,6 +178,15 @@ entorno de línea de órdenes.
 
 ![Código Python y REPL en VS Code](../img/code-repl.png)
 
+Hay varias extensiones de VSCode para Python; la más popular se llama
+simplemente
+[Python](https://marketplace.visualstudio.com/items?itemName=donjayamanne.python). Puede
+ser útil más adelante, pero mientras tanto, usando
+mayúsculas-control-P para seleccionar las órdenes que se van a
+ejecutar y buscando "REPL" aparecerá *Python: Start REPL* que
+arrancará una ventana de órdenes tal como la que aparece más arriba en
+la imagen. 
+
 ## Concluyendo
 
 Después de este capítulo deberías de tener instalado algún entorno con
