Corrige y añade datos de IDLE

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -149,7 +149,15 @@ creativas.
 
 Aunque sea sólo por el hecho de poder llevar un pequeño diario de lo
 que has hecho, es conveniente que trabajes con Python desde un
-editor. La mayoría de los editores te permiten trabajar con el
+editor. La distribución de Python incluye un entorno de desarrollo
+llamado IDLE. Escribiendo `idle` en un terminal, o desde la selección
+de órdenes de tu sistema operativo, te aparecerá la ventana
+correspondiente, que se abre directamente en un terminal de Python
+donde se pueden ejecutar las órdenes o evaluar expresiones. 
+
+![Usando IDLE, el entorno de trabajo de Python](../img/idle.png)
+
+La mayoría de los editores te permiten trabajar con el
 lenguaje que quieras en una de las ventanas mientras tienes el código
 en otra. Si usas `emacs`, el editor viene integrado. Si usas Atom,
 escribe
@@ -180,12 +188,16 @@ entorno de línea de órdenes.
 
 Hay varias extensiones de VSCode para Python; la más popular se llama
 simplemente
-[Python](https://marketplace.visualstudio.com/items?itemName=donjayamanne.python). Puede
-ser útil más adelante, pero mientras tanto, usando
+[Python](https://marketplace.visualstudio.com/items?itemName=donjayamanne.python). Con
+esta extensión se instalan una serie de órdenes para trabajar con
+Python, incluyendo un REPL: Usando
 mayúsculas-control-P para seleccionar las órdenes que se van a
 ejecutar y buscando "REPL" aparecerá *Python: Start REPL* que
 arrancará una ventana de órdenes tal como la que aparece más arriba en
-la imagen. 
+la imagen. Si usas otros editores,
+como
+[Visual Estudio, se le denomina "Ventana interactiva"](https://docs.microsoft.com/en-us/visualstudio/python/interactive-repl) y
+viene de serie con el mismo. 
 
 ## Concluyendo
 
