Comprobado por @cecimerelo
Closes #12

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -180,7 +180,7 @@ desde
 la sintaxis del lenguaje hasta
 presentarlo con colores de forma que la estructura del programa sea
 más fácil de entender. En algunos casos, como en el de Visual Studio
-Code, el editor y entorno de programación libre de Microsoft, tendrás
+Code (VSCode), el editor y entorno de programación libre de Microsoft, tendrás
 que instalar una extensión específica para poder trabajar con este
 entorno de línea de órdenes.
 
