Explicando el cortocircuito

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -82,7 +82,7 @@ equivale a Falso. Con `or` sucederá algo similar:
 45
 ```
 
-`or`eando un valor falso ([], que equivale a un *array* vacío y por
+`or`eando un valor falso (`[]`, que equivale a un *array* vacío y por
 tanto es falso) y otro verdadero, devolverá el que sea
 verdadero, o uno de ellos operando si los dos tienen el mismo tipo. A
 `or` le basta con que sea cierto uno de los operandos, como se ve
@@ -90,9 +90,11 @@ arriba.
 
 >Curiosamente, `or` devuelve el segundo operando si el resultado es
 >falso, y el primero si el resultado es True. Eso puede tener que ver
->con lo que se denomina "cortocircuito". En el caso de `and`, si el
+>con lo que se denomina "cortocircuito" en la evaluación de los
+>operandos de las operaciones lógicas. En el caso de `and`, si el
 >primer operando es falso, el resultado va a ser falso de todas
->formas. En el caso de `or`, aunque el primer operando sea falso, hay
+>formas, y por lo tanto la evaluación se *cortocircuita*, evitando
+>evaluar el segundo resultado. En el caso de `or`, aunque el primer operando sea falso, hay
 >que evaluar también el segundo, pero si el primero es verdadero, el
 >resultado va a ser verdadero, así que simplemente devuelven el último
 >operando evaluado. 
