Acortando líneas para libro

--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -124,15 +124,17 @@ de eso; sin embargo, cuando tratamos de ejecutarlo desde la línea de
 habitual, siempre tendrá que estar envuelto en una orden `print`: 
 
 ```bash
-python -c "print(list(map(lambda n: n/2 == n//2, range(1000))))"
+python -c "print(list(map(lambda n: n/2 == n//2, \
+  range(1000))))"
 ```
 
 Eso va a lanzar a la pantalla una buena cantidad de `True`s y `False`s
 así que es mejor que los separemos con retornos de carro, es decir, un
 carácter que ponga cada resultado en una línea
 
-```
-python -c "print('\n'.join(map(lambda n: str( n/2 == n//2 ), range(1000))))"
+```bash
+python -c "print('\n'.join(map(lambda n: str( n/2 == n//2 ), \
+  range(1000))))"
 ```
 
 donde usamos `join`, un método de `str` al que se le pasa una
@@ -143,7 +145,8 @@ cada uno de los elementos del `range`. No demasiado bueno. Vamos a
 *sacarlo fuera del bucle*, y definirlo una sola vez:
 
 ```bash
-python -c "es_par = lambda n: str(n/2 == n//2); print('\n'.join(map(es_par, range(1000))))"
+python -c "es_par = lambda n: str(n/2 == n//2); \
+  print('\n'.join(map(es_par, range(1000))))"
 ```
 Hemos definido la función `es_par`, pero ahora nos encontramos con dos
 órdenes seguidas. Para que el intérprete lo entienda, las separamos
@@ -197,12 +200,14 @@ necesitamos.
 from timeit import timeit
 ```
 
-Y vamos a medir las dos formas:
+Y vamos a medir las dos formas (incluyo `\` para indicar continuación
+de la línea, puede teclearse en la misma línea si es necesario):
 
 ```Python
 timeit(setup="map(lambda n: str( n/2 == n//2 ), range(1000))")
 0.006306399000095553
-timeit(setup="es_par = lambda n: str(n/2 == n//2); map(es_par, range(1000))")
+timeit(setup="es_par = lambda n: str(n/2 == n//2); \
+  map(es_par, range(1000))")
 0.006795324999984587
 ```
 
@@ -213,7 +218,8 @@ de la misma forma para todos los valores. Multipliquemos por 10 el
 número de elementos:
 
 ```Python
-timeit(setup="es_par = lambda n: str(n/2 == n//2); map(es_par, range(10000))")
+timeit(setup="es_par = lambda n: str(n/2 == n//2); \
+  map(es_par, range(10000))")
 0.006140023999250843
 timeit(setup="map(lambda n: str( n/2 == n//2 ), range(10000))")
 0.008905056998628424
@@ -224,7 +230,8 @@ importa el número de veces que se define. Incluso podemos probar otro
 test de *paridad*
 
 ```Python
-timeit(setup="es_par = lambda n: str(n^1 == 0);map(es_par, range(10000))")
+timeit(setup="es_par = lambda n: str(n^1 == 0); \
+  map(es_par, range(10000))")
 0.006006274999890593
 ```
 
@@ -288,7 +295,9 @@ múltiplo de tres si la cifra resultante es 3 o 9.
 
 ```Python
 suma_cifras = lambda n:  sum(map(int,list(str(n))))
-def is_multiple_of_3(n): sum = suma_cifras(n); return is_multiple_of_3(sum) if (sum >= 10) else (True  if (sum==3) or (sum==9) else False)
+def is_multiple_of_3(n): sum = suma_cifras(n); \
+  return is_multiple_of_3(sum) if (sum >= 10) \ 
+  else (True  if (sum==3) or (sum==9) else False)
 ```
 
 Tenemos también dos formas diferentes de definir funciones. Primero,
@@ -447,7 +456,9 @@ representa de esa forma:
 
 ```Python
 juego.items()
-dict_items([('jugador', 'Johnny'), ('mano', ['5♠', 'Q♣', '8♥']), ('estrategia', <function <lambda> at 0x7fcd3e298a60>)])
+dict_items([('jugador', 'Johnny'), \
+  ('mano', ['5♠', 'Q♣', '8♥']), \
+  ('estrategia', <function <lambda> at 0x7fcd3e298a60>)])
 ```
 Evidentemente, los diccionarios son, exactamente igual que cualquier
 otro objeto en Python, *representantes* o, de forma más precisa,
@@ -469,9 +480,10 @@ sepa que se ha acabado la definición de la función. En este caso:
 
 ```Python
 from random import random
-juego_ricky = { 'jugador'   :'Ricky', 
-	            'mano'      : ['3♠','4♣','A♥'], 
-				'estrategia': lambda mano: mano[int(random()*len(mano))] }
+juego_ricky = { 
+  'jugador'   :'Ricky', 
+  'mano'      : ['3♠','4♣','A♥'], 
+  'estrategia': lambda mano: mano[int(random()*len(mano))] }
 				
 juega(juego_ricky)
 '3♠'
