--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -204,7 +204,8 @@ antes, pero la podemos usar fácilmente de esta forma:
 
 ```Python
 from functools import reduce
-def fact(n): return reduce( lambda prev,this: prev*this, range(1,n+1),1)
+def fact(n): \
+  return reduce( lambda prev,this: prev*this, range(1,n+1),1)
 ```
 
 La función factorial, definida de esta forma, funciona exactamente
@@ -226,7 +227,9 @@ número. Podemos por ejemplo ir creando una sucesión de Fibonacci,
 partiendo de un valor inicial: los dos primeros valores.
 
 ```Python
-def fib(n): return reduce( lambda prev,this: prev+ [prev[-2]+prev[-1]], range(1,n+1), [1,1])
+def fib(n): 
+    return reduce( lambda prev,this: \
+	prev+ [prev[-2]+prev[-1]], range(1,n+1), [1,1])
 fib(12)
 [1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377]
 ```
