--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -91,7 +91,9 @@ para seleccionar la versión de Python que
 tenemos. Usa [esta línea](https://github.com/pyenv/pyenv-installer)
 desde Linux
 
-	curl -L https://raw.githubusercontent.com/pyenv/pyenv-installer/master/bin/pyenv-installer | bash
+```bash
+curl -L https://git.io/install-pyenv | bash
+```
 
 Si eres usuario de docker y no de Python, puedes usar también los
 [contenedores oficiales](https://hub.docker.com/_/python/) para
