--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -1,4 +1,4 @@
-# Tipos de datos básicos y cómo trabajar con ellos.
+# Tipos de datos básicos.
 
 Para empezar y con un afán bastante simplificador, vamos a trabajar con dos tipos de datos básicos: números y
 palabras. La cosa se puede complicar eventualmente, pero por lo pronto
