Error encontrado gracias a @crisconru

--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -132,7 +132,7 @@ los paréntesis, que además hacen más legible la expresión.
 > más de valores de una progresión
 > aritmética o geométrica.
 
-Los número que Python entiende son los números arábigos, vamos, los de
+Los números que Python entiende son los números arábigos, vamos, los de
 toda la vida. Si usamos números romanos como Ⅴ no los entenderá como
 tal, sino como un carácter y nos dará un error de variable no
 definida. No en todos los lenguajes es así. Perl 6 trabaja de forma
