Línea 21, creo que sobra una coma

--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -18,7 +18,7 @@ combinarlas. Empezaremos por las
 
 que especifican qué secuencia de operaciones se debe aplicar a un
 elemento determinado. En Python, las funciones son datos como
-cualquier otro, número o cadena, y se pueden definir usando `lambda`.
+cualquier otro número o cadena, y se pueden definir usando `lambda`.
 
 ```Python
 (lambda dato: dato*dato)(3+4j)
