Erratas en las líneas 8, 509 y 565

--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -5,7 +5,7 @@ dividir el espacio de todos los nombres posibles para poder usar
 nombres cortos y razonables, siempre que tengan un prefijo que aclare
 el contexto. A estos prefijos se les llama *espacios de nombres* o
 *namespaces*, y suelen estar definidos en módulos, ficheros que
-contienen funciones relacionadas, a veces on una estructura que
+contienen funciones relacionadas, a veces con una estructura que
 permite crear objetos de ese tipo.
 
 Los espacios de nombres, precisamente, preceden a los
@@ -506,7 +506,7 @@ específicos de dominio como el que incluye PowerShell. Este script,
 por ejemplo, define una tabla hash o diccionario:
 
 ```PowerShell
-$juego_ricky = @{ "jugador" ="Ricky"; "mano" = @("3♠","4♣","A♥")}
+$juego_ricky = @{ "jugador" = "Ricky"; "mano" = @("3♠","4♣","A♥")}
 $juego_ricky
 ```
 
@@ -562,7 +562,7 @@ sigan pacíficamente con su juego, su Bourbon y sus pretzels. Ahora
 Johnny juega el 7 de corazones:
 
 ```Python
-mano_johnny - {'7♥'}
+mano_johnny - {'7♦'}
 {'7♥', '7♣'}
 ```
 
