--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -289,7 +289,7 @@ Al final, los lenguajes de programación son lenguajes que te permiten
 expresar y resolver problemas. Enseñar a pensar usando ordenadores se
 denomina
 
-## Pensamiento computacional
+## pensamiento computacional,
 
 y se basa
 en
@@ -392,7 +392,7 @@ reduce a puertas lógicas que pueden tomar un valor 0 o 1, verdad o
 mentira. Por eso casi todos los lenguajes de programación tienen
 operadores que permiten trabajar con los números
 
-## A nivel de bit
+## a nivel de bit.
 
 Trabajar con números en su representación binaria muchas veces es
 la forma más rápida de hacer ciertas pruebas; dado que, de hecho, el
@@ -473,7 +473,7 @@ instrucciones del mismo, de realizar esta operación.
 Es muy probable que en el ejercicio anterior hayas tenido buscar en
 Internet. Si lo has hecho, te habrás dado cuenta de que
 
-## Todo está en StackOverflow
+## todo está en StackOverflow.
 
 Para qué vamos a engañarnos, seguro que siguiendo este tutorial o,
 para el caso, cualquier otro, habéis consultado una o más veces Google
