--- a/txt/04.componiendo.md
+++ b/txt/04.componiendo.md
@@ -14,7 +14,7 @@ trabajar con estas estructuras, con una forma de escribirlas o
 sintaxis particular y unas funciones que permiten modificarlas o
 combinarlas. Empezaremos por las
 
-## Funciones
+## funciones,
 
 que especifican qué secuencia de operaciones se debe aplicar a un
 elemento determinado. En Python, las funciones son datos como
@@ -104,7 +104,7 @@ intencionada) en el resto de los lenguajes. Incluso en Python.
 Una función es una estructura compleja porque incluye definiciones de
 parámetros y también código. Pero
 
-## Vectores, listas y otras estructuras secuenciales
+## vectores, listas y otras estructuras secuenciales
 
 almacenan grupos de datos que pueden tener alguna relación
 entre ellas. Por ejemplo
@@ -193,7 +193,7 @@ tener elementos homogéneos o heterogéneos. En muchos casos vamos a
 trabajar con elementos del mismo tipo, numéricos por ejemplo. Siempre
 que vayamos a
 
-## Procesar listas
+## procesar listas
 
 como la siguiente:
 ```
@@ -316,7 +316,7 @@ Haskell, como todos los lenguajes como los que hemos trabajado, tiene
 un REPL que se ejecuta desde la línea de órdenes, así que quizás
 convenga también
 
-## Aprender unas cuantas órdenes
+## aprender unas cuantas órdenes
 
 que permiten trabajar con la misma. Estas órdenes corresponden al
 `shell` de Linux, que funciona, aunque posiblemente en una versión más
