--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -13,9 +13,9 @@ identificadores. Ya hemos visto algunos de estos, los que se usan para
 designar a las funciones. Pero ya va siendo hora de que conozcamos a
 nuestras amigas
 
-## Las variables
+## las variables,
 
-Las variables almacenan objetos que vamos a usar más adelante;
+que almacenan objetos que vamos a usar más adelante;
 permiten hacer expresiones más claras y concisas y no tener que
 recalcular continuamente valores. Ya hemos visto una, `_`, que
 almacena el último valor calculado en el intérprete. También otras
@@ -114,7 +114,7 @@ menos directa. A calcular cuanto tiempo se tarda en realizar una
 operación se le llama hacer *benchmarking* y todos los lenguajes de
 programación vienen preparados para ello. Veremos como
 
-## Medir la velocidad en Python
+## medir la velocidad en Python.
 
 Pero primero vamos a ver cómo trabajar con Python desde la línea de
 órdenes. Cuando trabajamos en el REPL, se trata de un bucle en el que
@@ -250,7 +250,7 @@ función crítica donde el sistema pasa el 90% del tiempo no vale la pena optimi
 En muchos casos, la mejor forma de optimizar es simplemente plantear
 algoritmos de otra forma. Por ejemplo, usando
 
-## Recursión
+## recursión.
 
 Se habla de recursión cuando una función se llama a sí misma. En
 programación funcional, resolver un problema usando recursión es la forma *normal* de hacer las cosas,
@@ -424,7 +424,7 @@ apariencia que corresponda a las marcas incluidas.
 Realmente va a ser conveniente que usemos este tipo de repositorios
 cuando trabajemos con estructuras de datos más, complejas, como los
 
-## Conjuntos y diccionarios
+## conjuntos y diccionarios.
 
 Comencemos con los que se denominan *diccionarios*, aunque en otros
 lenguajes se les llama *arrays* asociativos o tablas *hash*. Los
@@ -545,11 +545,11 @@ True
 > *Ejercicio*: generar una baraja de cartas y una función que extraiga
 > una mano de 3 cartas de ella.
 
-Los conjuntos
-tienen
+Para manejar conjuntos en Python, éste nos provee de 
 [las operaciones típicas en ellos](https://www.learnpython.org/en/Sets).
 Por ejemplo, si Ricky sospecha que Johnny se ha sacado una carta de la
-manga, hallará la intersección entre las dos:
+manga, hallará la intersección entre las dos manos para ver si hay
+alguna repetida:
 
 ```Python
 mano_johnny= set( ['7♣', '7♥', '7♦'] )
