--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -58,9 +58,9 @@ cientos de ordenadores, pero ninguno de ellos tiene teclado o acceso
 de administrador, crean esas cosas. Así que nos tendremos que
 trasladar a
 
-## La nube
+## la nube.
 
-en una primera, y quizás mala, aproximación, la nube son recursos
+En una primera, y quizás mala, aproximación, la nube son recursos
 administrados por empresas que se pueden usar pagando sólo por el uso
 que se les da. Pero para lo que nos ocupa, son ordenadores que podemos
 usar desde cualquier navegador u ordenador y que en muchos casos se
