--- a/txt/07.entendiendo.md
+++ b/txt/07.entendiendo.md
@@ -50,9 +50,9 @@ alguna idea para mejorarlo. Por ejemplo ¿más colores? ¿Una
 distribución diferente de los mismos? ¿Algún código repetido que se
 pueda convertir en una función? Es el momento de
 
-## Solicitar un *pull request*
+## solicitar un *pull*;
 
-GitHub es en realidad una web que aloja proyectos gestionados con
+es decir, *pull request*. GitHub es en realidad una web que aloja proyectos gestionados con
 `git`, el sistema de control de fuentes distribuido. El hecho de que
 sea distribuido significa que no hay *un* repositorio, que es el
 nombre que alojamiento de un proyecto, distinguido
