Correciones en líneas 190, 198, 232, 255, 272

--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -187,7 +187,7 @@ sort ['3♠','4♣','A♥'] Z sort ['7♣', '7♥', '7♦']
 ```
 
 Perl6 se ahorra paréntesis cuando no hacen falta y convierte `zip` en
-el operador infijo `Z`, es decir operador que, tal como los operadores
+el operador infijo `Z`, es decir, operador que, tal como los operadores
 matemáticos, está en medio de los operandos, en vez de al principio
 (lo que se suele denominar, en el caso de los operadores, *prefijo*).
 
@@ -195,7 +195,7 @@ matemáticos, está en medio de los operandos, en vez de al principio
 > hallar su suma.
 
 Otra función, que estaba por alguna razón en Python 2 pero que ha sido
-exiliada a `functools` en Python 3 es `reduce`. Reduce aplica
+exiliada a `functools` en Python 3, es `reduce`. Esta aplica
 repetidamente una función a los elementos de una lista o tupla, a
 partir de un valor inicial. Es decir, aplica al primer elemento y al
 valor inicial; el resultado lo aplica junto con el segundo elemento y
@@ -229,7 +229,7 @@ partiendo de un valor inicial: los dos primeros valores.
 ```Python
 def fib(n):
     return reduce( lambda prev,this: \
-	prev+ [prev[-2]+prev[-1]], range(1,n+1), [1,1])
+	prev+[prev[-2]+prev[-1]], range(1,n+1), [1,1])
 fib(12)
 [1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377]
 ```
@@ -252,7 +252,7 @@ métodos de los arrays:
 
 y, como se ve, se usa la misma palabra clave, `function`, para definir
 `lambdas`, lo que en realidad se llaman `closures` o funciones
-anónimas, que para definir funciones que no lo son: simplemente se
+anónimas, que para definir funciones que no lo son, simplemente se
 añade el nombre de la función previamente al paréntesis. Estos
 ejemplos de *list comprehension* son ubicuos en los lenguajes de
 programación, y Python tiene además una forma que combina `map` y
@@ -269,7 +269,7 @@ la función que se va a aplicar a todos los elementos de la lista,
 lista que se genera precisamente con la expresión `for n in
 range(1,100)`; el `if` al final filtra sólo los elementos que vamos a
 usar. `Fraction` es una clase para trabajar con quebrados; el primer
-elemento es el numerador, el segundo es el numerador, aunque también
+elemento es el numerador, el segundo es el denominador, aunque también
 se le pueden pasar valores de esta forma: `Fraction(1.3)`, que se
 convertirá automáticamente en 13/10. Con esta serie de fracciones se
 puede empezar a trabajar: hallar la suma, por ejemplo, o crear
