Línea 13, cacofonía con " y, incluso"

--- a/txt/07.entendiendo.md
+++ b/txt/07.entendiendo.md
@@ -10,7 +10,7 @@ depurador, puedes conseguir al menos alterar el programa para que haga
 algo ligeramente diferente.
 
 Aún así, siempre se aprende algo. La programación es un medio de
-expresión que, como tal, tiene siempre un componente individual y,
+expresión que, como tal, tiene siempre un componente individual e,
 incluso en Python donde hay sólo una forma de hacer las cosas, puedes
 aprender múltiples formas de hacerlas. Y hoy en día, en GitHub, es
 bastante fácil hacerlo, simplemente buscando algún repositorio.
