Extiende y define conceptos

--- a/txt/07.entendiendo.md
+++ b/txt/07.entendiendo.md
@@ -20,10 +20,19 @@ bastante fácil hacerlo, simplemente buscando algún repositorio.
 Miremos un código cualquiera, por ejemplo este
 https://github.com/JJ/sequences-mondrian que es del autor del
 libro. En realidad este código está desarrollado a partir de este otro
-https://github.com/psicobyte/PiMondrian de Pablo Hinojosa.
+https://github.com/psicobyte/PiMondrian de Pablo Hinojosa. Cuando se
+habla de *fuentes abiertas* u *open source* es de esto precisamente de
+lo que se está hablando: de que sea posible examinar cómo está hecho
+un programa. Si, además, podemos copiar, modificar y publicar las
+modificaciones estaremos hablando
+de [software libre](https://es.wikipedia.org/wiki/Software_libre). El
+hecho de que podamos hacer todo lo que viene a continuación viene a
+mostrar la importancia del software libre en el aprendizaje de la
+informática. Sin él, el panorama actual, la programación de este
+siglo, sería muy diferente. Pero volvamos al código
 
 > Ejercicio: a grandes rasgos, señalar las diferencias entre el
-> código.
+> código de los dos repositorios.
 
 En estos casos, el buscador de GitHub siempre ayuda. Por ejemplo, te
 puede ayudar a buscar dónde se usa un identificador determinado, donde
