Añadidas instrucciones para Windows.
Closes #19

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -10,7 +10,9 @@ necesite python. Escribe
 
 en tu línea de órdenes para ver qué versión tienes instalada. Si
 tienes la versión 3, estás listo para hacer los ejercicios del resto del libro. Si no, continúa leyendo después del
-interludio siguiente.
+interludio siguiente donde te explicaremos cómo trabajar con la línea
+de órdenes de tu sistema opeativo, algo que nos va a servir durante el
+resto del libro. 
 
 ## Trabajando con la línea de órdenes.
 
@@ -20,7 +22,10 @@ puedes trabajar
 [de la misma forma en Windows](https://www.xataka.com/aplicaciones/asi-es-usar-la-consola-bash-de-ubuntu-en-windows-10). En
 las últimas actualizaciones todavía es más fácil,
 pudiendo
-[descargártela desde la Windows Store](https://www.xataka.com/aplicaciones/ubuntu-llega-a-la-windows-store-y-el-matrimonio-microsoft-linux-esta-en-su-mejor-momento). Esta
+[descargártela desde la Windows Store](https://www.xataka.com/aplicaciones/ubuntu-llega-a-la-windows-store-y-el-matrimonio-microsoft-linux-esta-en-su-mejor-momento),
+aunque pare esto tendrás que estar dentro de un programa que se
+denomina *Windows Insider*, por lo que posiblemente sea más fácil
+activar el subsistema Ubuntu como se indica en el primer enlace. Esta
 línea de órdenes de Linux presenta una serie de ventajas, como poder
 trabajar con [temas](https://github.com/Bash-it/bash-it/wiki/Themes)
 que hacen de tu experiencia algo mucho más agradable, como esto:
@@ -53,7 +58,8 @@ ejecutar cosas. Conviene que conozcas unos cuantos trucos básicos
   un montón. Dependiendo del intérprete que uses, te aparecerán
   diferentes opciones que podrás seleccionar con el cursor.
 
-La línea de órdenes que se usa en los Mac y Linux es la misma, y tiene
+La línea de órdenes, que en realidad se denomina *consola* o
+*terminal*, que se usa en los Mac y Linux es la misma, y tiene
 una buena cantidad. Usa [el buscador DuckDuckGo con su servicio de chuletas integrado](https://duckduckgo.com/?q=linux+cheatsheet&t=canonical&ia=cheatsheet) para
 encontrarla. Las primeras órdenes, `ls`, `rm`, `mkdir`, `cd` van a ser las
 que vas a necesitar con
@@ -79,7 +85,12 @@ o
 
 Si usas
 el [Package Manager](https://www.nuget.org/packages/python/3.6.0) de
-NuGet para Windows.
+NuGet para Windows o [`chocolatey`](https://chocolatey.org/), el otro
+gestor de paquetes para Windows. Ninguno de los dos vienen instalados
+en la versión básica, por lo que tendrás que instalártelos antes. Por
+supuesto, también puedes
+descargarte un instalador de 
+[Python para Windows](https://www.python.org/downloads/windows/) de la web.
 
 ## Usando `pyenv`
 
