--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -11,7 +11,7 @@ necesite python. Escribe
 en tu línea de órdenes para ver qué versión tienes instalada. Si
 tienes la versión 3, estás listo para hacer los ejercicios del resto del libro. Si no, continúa leyendo después del
 interludio siguiente donde te explicaremos cómo trabajar con la línea
-de órdenes de tu sistema opeativo, algo que nos va a servir durante el
+de órdenes de tu sistema operativo, algo que nos va a servir durante el
 resto del libro. 
 
 ## Trabajando con la línea de órdenes.
