Sólo por llegar a 5K

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -32,9 +32,10 @@ que hacen de tu experiencia algo mucho más agradable, como esto:
 
 ![zsh con oh-my-zsh](../img/bash.png)
 
-En cualquier caso, tendrás que trabajar para ejecutar estos programas
+En cualquier caso, conviene que conozcas algunas cosas básicas del
+intérprete `bash` para ejecutar estos programas
 de una sola línea o simplemente para entrar en Python y empezar a
-ejecutar cosas. Conviene que conozcas unos cuantos trucos básicos
+ejecutar cosas. Por ejemplo, estos trucos básicos
 
 * Te puedes mover por la línea con las flechas, pero también de
   palabra en palabra con control →. Control-a te llevará al principio
@@ -175,7 +176,7 @@ lenguaje que quieras en una de las ventanas mientras tienes el código
 en otra. Si usas `emacs`, el editor viene integrado. Si usas Atom,
 escribe
 
-```
+```bash
 apm install Repl
 ```
 
@@ -215,6 +216,6 @@ viene de serie con el mismo.
 ## Concluyendo
 
 Después de este capítulo deberías de tener instalado algún entorno con
-el que poder trabajar con Python y ser capaz de ejecutar `python`
+el que poder trabajar con Python, aparte de ser capaz de ejecutar `python`
 desde la línea de órdenes. Escoge el que más te guste, o instálatelos
 todos. Son software libre y es lo que tienen.
