Tratando de arreglar la estructura

--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -491,7 +491,7 @@ juega(juego_ricky)
 'A♥'
 ```
 
-Como hay un ``random()`` en la estrategia, la carta resultante será
+Como hay un `random()` en la estrategia, la carta resultante será
 una aleatoria de entre las que Ricky tenga en su mano.
 
 > *Ejercicio*: diseñar una estructura de datos para sucesiones
