--- a/txt/05.identificando.md
+++ b/txt/05.identificando.md
@@ -569,7 +569,7 @@ mano_johnny - {'7♦'}
 Ricky juega el 3♠, que es muestra, así que se lleva la mano. Como los
 dos tienen ahora dos cartas, tienen que coger del mazo:
 
-```
+```Python
 from random import choice
 mano_johnny = mano_johnny | { choice(baraja) }
 ```
@@ -578,7 +578,7 @@ Una vez más, usamos una función del módulo `random` que elige un
 elemento de un conjunto de cosas, en este caso una baraja. De hecho,
 siendo la brisca habría sido mucho mejor hacerlo así
 
-```
+```Python
 mano_johnny = mano_johnny | { baraja.pop() }
 ```
 
