Tratando de arreglar el tema emojis

--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -126,7 +126,6 @@ encuentre con operaciones demasiado complicadas salvo transcribiendo
 fórmulas, pero es conveniente saberlo y en caso de duda siempre están
 los paréntesis, que además hacen más legible la expresión.
 
-
 > *Ejercicio*: usando `_` para recordar el valor anterior y ↑ para
 > repetir la última orden en el intérprete, ir calculando una docena o
 > más de valores de una progresión
@@ -148,11 +147,14 @@ Afortunadamente, Python no sólo trabaja con números. También puede
 
 Pero vamos a dar un paso hacia atrás, o hacia un lado, para reconocer
 que existen letras más allá de nuestro alfabeto latino. Empezando por
-los emojis, tales como este, ⌣, y terminando con los caracteres de
+los emojis, tales como este, ☆, y terminando con los caracteres de
 alfabetos vivos o muertos como
 este [ꡡ](https://es.wikipedia.org/wiki/Alfabeto_%27Phags-pa). Un
 lenguaje de programación moderno, y un ordenador moderno, debe ser
-capaz de trabajar con todos ellos.
+capaz de trabajar con todos ellos. No siempre será así, y tanto entre
+las dos comas anteriores como justo antes de las comillas abajo puede
+aparecer un espacio en blanco si el tipo de letra que se use no es
+capaz de acomodar el caracter Unicode correspondiente. 
 
 	"þor el poderoso ✌"
 
