--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -154,7 +154,7 @@ lenguaje de programación moderno, y un ordenador moderno, debe ser
 capaz de trabajar con todos ellos. No siempre será así, y tanto entre
 las dos comas anteriores como justo antes de las comillas abajo puede
 aparecer un espacio en blanco si el tipo de letra que se use no es
-capaz de acomodar el caracter Unicode correspondiente. 
+capaz de acomodar el carácter Unicode correspondiente. 
 
 	"þor el poderoso ✌"
 
