--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -149,7 +149,7 @@ Pero vamos a dar un paso hacia atrás, o hacia un lado, para reconocer
 que existen letras más allá de nuestro alfabeto latino. Empezando por
 los emojis, tales como este, ☆, y terminando con los caracteres de
 alfabetos vivos o muertos como
-este [ꡡ](https://es.wikipedia.org/wiki/Alfabeto_%27Phags-pa). Un
+este [Ͳ](https://en.wikipedia.org/wiki/Sampi). Un
 lenguaje de programación moderno, y un ordenador moderno, debe ser
 capaz de trabajar con todos ellos. No siempre será así, y tanto entre
 las dos comas anteriores como justo antes de las comillas abajo puede
@@ -194,9 +194,9 @@ El `+` concatenará cadenas:
 >>> _[0:3]
 _[0:3]
 'þor'
->>> _ + " y Loki el mentiroso ❄"
-_ + " y Loki el mentiroso ❄"
-'þor y Loki el mentiroso ❄'
+>>> _ + " y Loki el mentiroso"
+_ + " y Loki el mentiroso"
+'þor y Loki el mentiroso'
 ```
 
 y el asterisco `*`, usado tradicionalmente como símbolo para
