Elimina referencias al uso de sudo con pip
Con agradecimientos a @lulivi por señalármelo. Se gana una dedicatoria
en la siguiente edición. Closes #22

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -123,11 +123,21 @@ afectan al resto del sistema; la principal diferencia con `pyenv` es que en este
 Para instalar se utiliza el gestor de módulos en python conocido como `pip`:
 
 ```sh
-$ [sudo] pip install virtualenv
+$ pip install virtualenv
 ```
 
 Con esto podemos tener entornos aislados, resolviendo problemas de dependencias, versiones,
-y permisos. Más información sobre virtualenv [en su web](https://virtualenv.pypa.io/en/stable/). 
+y permisos. Más información sobre
+virtualenv [en su web](https://virtualenv.pypa.io/en/stable/). 
+
+> Por favor, fíjate en que `pip` se ejecuta sin privilegios de
+> superusuario. Hoy en día es fácil mantener diferentes versiones de
+> Python, incluyendo la del sistema si es necesario, usando
+> herramientas tales como [`pyenv`](https://github.com/pyenv/pyenv) o
+> el propio `virtualenv`. En cualquier caso, tiene sentido que los
+> módulos del desarrollador se mantengan en el directorio del
+> desarrollador, por lo que es mejor no usar *nunca* `pip` con
+> privilegios de superusuario, es decir, usando `sudo`. 
 
 ## Trabajando desde cualquier lugar
 
