--- a/txt/06.sinpilas.md
+++ b/txt/06.sinpilas.md
@@ -86,10 +86,12 @@ aparece abajo una terminal desde la que se puede ejecutar el REPL de
 python y alguna cosa más. Se usa
 
 ```
-sudo pip3 install bpython
+pip3 install bpython
 ```
 
-por ejemplo, para instalar el CLI con el que vamos a trabajar.
+por ejemplo, para instalar el CLI con el que vamos a trabajar en la
+versión 3 de Python, que es la que hemos usado a lo largo de todo este
+libro. 
 
 
 ![usando `bpython` en Cloud9](../img/bpython-c9.io.png).
